<resources>
    <string name="app_name">All Blind</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel">취소</string>
    <string name="button_delete">삭제</string>
    <string name="ok">OK</string>
    <string name="button_save">저장</string>
    <string name="hint_phone">연락처</string>
    <string name="hint_state">상태</string>
    <string name="hint_name">이름</string>
    <string name="label_name">이름</string>
    <string name="label_phone">연락처</string>
    <string name="label_state">상태</string>
    <string name="friend">친구</string>
    <string name="my_profile">내 프로필</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_description">이모티콘 버튼</string>

    <string name="live_member">블라인드 멤버</string>
    <string name="refresh">갱신</string>
    <string name="post_eng">Post</string>
    <string name="post_kor">보내기</string>
    <string name="erase">지우기</string>
    <string name="msg_not_support_lang">This language does not support.</string>
    <string name="msg_success_init">Please input text and click button.</string>
    <string name="new_msg">새로운 메시지 !</string>
    <string name="opposite_user_logout">해당 사용자가 나갔으므로 보낼 수 없습니다.</string>

    <string name="register_success">등록 성공</string>

    <!-- BUTTON -->
    <string name="popup_yes">네</string>
    <string name="popup_no">아니오</string>
    <string name="login_button">접속</string>
    <string name="register_button">계정 생성</string>
    <string name="register_n_login_button">CREATE &amp; LOG IN</string>
    <string name="tab_name_live">Blinder</string>
    <string name="tab_name_mem">Member</string>
    <string name="tab_name_set">Setting</string>
    <string name="logout">로그아웃</string>
    <string name="send_mail">MAIL로 초대하기</string>
    <string name="send_sms">SMS로 초대하기</string>
    <string name="on_chat">채팅하기</string>
    <string name="add_friend">친구 추가</string>
    <!-- HINT -->
    <string name="login0_hint">E-mail</string>
    <string name="login1_hint">이름</string>
    <string name="login2_hint">폰 번호</string>
    <string name="chat_hint">메시지를 입력하세요 !</string>

    <!-- SHOW MESSAGE -->
    <string name="detail_name">이름</string>
    <string name="detail_mobno">번호</string>
    <string name="in_create">등록 중 ...</string>
    <string name="in_login">로그인 중 ...</string>
    <string name="in_load">Loading !</string>
    <string name="in_reload">불러오는 중 ...</string>
    <string name="in_send">보내는 중 ... </string>
    <string name="in_logout">로그아웃 중 ...</string>
    <string name="popup_backkey_title">Back키를 누르셨네요</string>
    <string name="popup_backkey_content">가실 건가요? </string>
    <string name="popup_logout_title">Logout버튼을 누르셨네요</string>
    <string name="popup_logout_content">나가실 건가요?? </string>

    <!-- TOAST MESSAGE-->
    <string name="toast_require_empty">Fill up ! plz</string>
    <string name="gcm_not_support">Sorry, Your device is not support GCM</string>
</resources>
